force-app/main/default/objects/Kandydat__c/Kandydat__c.object-meta.xml
<CustomObject>
    <description>Kandydaci na oferty pracy</description>
    <label>Kandydat</label>
    <nameField>
        <displayFormat>K-{0000000000}</displayFormat>
        <label>Numer Kandydata</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kandydaci</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>