force-app/main/default/objects/Kandydat__c/fields/Doswiadczenie__c.field-meta.xml
<CustomField>
    <fullName>Doswiadczenie__c</fullName>
    <description>Doświadczenie zawodowe Kandydata.</description>
    <inlineHelpText>Doświadczenie zawodowe Kandydata.</inlineHelpText>
    <label>Doświadczenie</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>