force-app/main/default/objects/Kandydat__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Kandydata</description>
    <inlineHelpText>Email Kandydata</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>