force-app/main/default/objects/Kandydat__c/fields/Imie__c.field-meta.xml
<CustomField>
    <fullName>Imie__c</fullName>
    <description>Imię Kandydata</description>
    <inlineHelpText>Imię Kandydata</inlineHelpText>
    <label>Imię</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>