force-app/main/default/objects/Kandydat__c/fields/Nazwisko__c.field-meta.xml
<CustomField>
    <fullName>Nazwisko__c</fullName>
    <description>Nazwisko Kandydata</description>
    <inlineHelpText>Nazwisko Kandydata</inlineHelpText>
    <label>Nazwisko</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>