force-app/main/default/objects/Kandydat__c/fields/Telefon__c.field-meta.xml
<CustomField>
    <fullName>Telefon__c</fullName>
    <description>Telefon Kandydata</description>
    <inlineHelpText>Telefon Kandydata</inlineHelpText>
    <label>Telefon</label>
    <type>Phone</type>
</CustomField>