force-app/main/default/objects/Kandydat__c/fields/Umiejetnosci__c.field-meta.xml
<CustomField>
    <fullName>Umiejetnosci__c</fullName>
    <description>Umiejętności Kandydata</description>
    <inlineHelpText>Umiejętności Kandydata</inlineHelpText>
    <label>Umiejętności</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>