force-app/main/default/objects/Kandydat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Imie__c</columns>
    <columns>Nazwisko__c</columns>
    <columns>Umiejetnosci__c</columns>
    <columns>Doswiadczenie__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>